2026-02-02  Darshit Shah  <darnir@gnu.org>

	* poke/pk-cmd.c (pk_atoi, pk_atou): Move the functions from here ...
	* common/pk-utils.c: ... to here
	* pk-hserver.c (parse_int): Delete this function, we will use the method
	  in pk-utils
	* pk-hserver.c (read_from_client): Make the token an unsigned int. Poke will
	  never generate negative token values. Similarly, make the copy of buffer a
	  const pointer to satisfy the requirements in pk_atou()

2026-02-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* bootstrap: Updated by `./bootstrap --bootstrap-sync'.
	* autogen.sh: Likewise.
	* autopull.sh: Likewise.
	* bootstrap-funclib.sh: Likewise.

2025-10-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/time.pk (ptime_str): New function to return string instead of
	printing the time on stdout.  This function zero-pad two-digits numbers
	for `day', `hour', `minute' and `seconds'.
	(ptime): Update to use `ptime_str'.
	* testsuite/poke.pickles/time-test.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.
	* testsuite/poke.time/time32.pk: Update outputs accordingly.

2025-09-07  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-asm.c (pkl_asm_insn_binop): Use correct insn for
	converting UINT to ULONG.
	* libpoke/pkl-gen.pks (RAS_MACRO_TYPEOF): Fix value of `code' field
	to be of type UINT instead of INT.
	* libpoke/pvm.jitter (PVM_BOOL_BINOP): Add assertion for run-time type
	checking.

2025-08-15  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/poke.texi (Payloads): Fix example to use megabits instead of
	megabytes.

2025-08-15  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/ustar.pk (USTAR_Sector.ustar): Change type to string
	and add constraint.
	(USTAR_Sector): Add 12#B of padding at the end.
	(USTAR_Sector.get_file_name): New helper method.
	(USTAR_Sector.get_owner_user_name): Likewise.
	(USTAR_Sector.get_owner_group_name): Likewise.
	* testsuite/poke.pickles/ustar-test.pk: Add tests.
